WhitespaceDx/force-app/main/default/objects/AAObjWithPickList__c/fields/GloablList__c.field-meta.xml
<CustomField>
<fullName>GloablList__c</fullName>
<label>GloablList</label>
<type>Picklist</type>
<valueSet>
    <restricted>true</restricted>
    <valueSetName>GlobalBackupPicklistValSet</valueSetName>
</valueSet>
</CustomField>